[package]
name = "asset-mapping"
version = "1.0.0"
description = "资产测绘工具"
authors = ["ayy"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open", "dialog-all", "fs-all", "http-all", "path-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
base64 = "0.21"
chrono = "0.4"
csv = "1.2"
rand = "0.8"
regex = "1.10"
once_cell = "1.19"

[dev-dependencies]
quickcheck = "1.0"
quickcheck_macros = "1.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

