[package]
name = "asset-mapping"
version = "1.0.0"
description = "资产测绘工具"
authors = ["ayy"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "socks"] }
tokio = { version = "1", features = ["full"] }
base64 = "0.21"
chrono = "0.4"
csv = "1.2"
rand = "0.8"
regex = "1.10"
once_cell = "1.19"
serde_yaml = "0.9.34"
walkdir = "2.5.0"
dirs = "5"
tauri-plugin-dialog = "2"
tauri-plugin-http = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"

[dev-dependencies]
quickcheck = "1.0"
quickcheck_macros = "1.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

